Resolves: tdf#127120 double selection in B&N dialog

because the list wants to ensure that at least one thing is selected and the
multiselect is implemented with two events of deselect-all followed by select.

post a user event on getting either deselect or select and process it
once when the dust has settled

Change-Id: I553bf23d7a8c4625a8706fb2df4b169d91b7ad32