cui/source/inc/numpages.hxx
@@ -331,8 +331,9 @@ class SvxNumPositionTabPage : public SfxTabPage
     std::unique_ptr<SvxNumRule> pActNum;
     std::unique_ptr<SvxNumRule> pSaveNum;
 
-    sal_uInt16              nActNumLvl;
-    sal_uInt16              nNumItemId;
+    ImplSVEvent*        m_pLevelHdlEvent;
+    sal_uInt16          nActNumLvl;
+    sal_uInt16          nNumItemId;
     MapUnit             eCoreUnit;
 
     bool                bModified           : 1;
@@ -371,6 +372,7 @@ class SvxNumPositionTabPage : public SfxTabPage
     void                InitControls();
 
     DECL_LINK(LevelHdl_Impl, weld::TreeView&, void);
+    DECL_LINK(LevelHdl, void *, void);
     DECL_LINK(EditModifyHdl_Impl, weld::ComboBox&, void);
     DECL_LINK(DistanceHdl_Impl, weld::MetricSpinButton&, void);
     DECL_LINK(DistanceFocusHdl_Impl, Control&, void);
